--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-    <title>IGME230 Mackenzie Karwas</title>
-  
+    <title>Mackenzie Karwas</title>
 </head>
-
 <body>
+    <h1>IGME 230 Mackenzie Karwas</h1>
 </body>
 </html>
