--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html>
 
 <head>
-    <title>Mackenzie Karwas</title>
+    <title>Kenzie Karwas</title>
+    <link rel="stylesheet" href="css/week3.css">
 </head>
+
 <body>
-    <h1>IGME 230 Mackenzie Karwas</h1>
+    <div class="container">
+        <img src="image.jpg" class="image">
+        <h1>Kenzie Karwas</h1>
+        <h2>IGME 230</h2>  
+    </div>
+    <div class="container2">
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+        <p>text</p>
+    
+    </div>
 </body>
 </html>
