--- a/week3b/week3b.html
+++ b/week3b/week3b.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../../favicon-16x16.png">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" href="week3b.css">
+    <link rel="stylesheet" href="hotel.css">
+    
 
     <title>Week 3 Exercise</title>
 </head>
