--- a/project1/index.html
+++ b/project1/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="container2">
         <h3> Exercises</h3>
-        <<a href="https://mmk3054.github.io/igme230/week3b/week3b.html">week3b</a>
+        <a> href="https://mmk3054.github.io/igme230/week3b/week3b.html">week3b</a>
         <p>text</p>
         <p>text</p>
         <p>text</p>
