--- a/project1/index.html
+++ b/project1/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Kenzie Karwas</title>
-    <link rel="stylesheet" href="css/week1.css">
+    <link rel="stylesheet" href="week1.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <p>text</p>
         <p>text</p>
         <p>text</p>
-        <p>text</p>
+        <p>test</p>
     </div>
 
 </body>
