--- a/old/index.html
+++ b/old/index.html
@@ -3,27 +3,25 @@
 
 <head>
     <title>Kenzie Karwas</title>
-    <link rel="stylesheet" href="week1.css">
+    <link rel="stylesheet" href="css/week3.css">
 </head>
 
 <body>
     <div class="container">
         <img src="image.jpg" class="image">
         <h1>Kenzie Karwas</h1>
-        <h2>IGME 230</h2>
+        <h2>IGME 230</h2>  
     </div>
     <div class="container2">
-        <h3> Exercises</h3>
-        <a href="https://mmk3054.github.io/igme230/week3b/week3b.html">week3b</a>
         <p>text</p>
         <p>text</p>
         <p>text</p>
         <p>text</p>
         <p>text</p>
         <p>text</p>
-        <p>test</p>
+        <p>text</p>
+        <p>text</p>
+    
     </div>
-
 </body>
-
 </html>
