--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     </div>
     <div class="container2">
         <h3> Exercises</h3>
-        <a href="https://mmk3054.github.io/igme230/week3b/week3b.html">week3b</a>
+        <a href="Exercises/week3b/week3b.html">week3b</a>
         <p>text</p>
         <p>text</p>
-        <p>text</p>
-        <p>text</p>
-        <p>text</p>
-        <p>text</p>
-        <p>test</p>
+        <h3> Projects</h3>
+        /*<a href="Exercises/week3b/week3b.html">week3b</a>*/
+        <p>Project 1</p>
+        <p>Project 2</p>
+   
     </div>
 
 </body>
