--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <div class="container2">
         <h3> Exercises</h3>
         <a href="Exercises/week3b/week3b.html">week3b</a>
-        <p>text</p>
+        <a href="Exercises/week3b/week3b.html">week5a</a>
         <p>text</p>
         <h3> Projects</h3>
-        /*<a href="Exercises/week3b/week3b.html">week3b</a>*/
         <p>Project 1</p>
         <p>Project 2</p>
    
