--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="container">
-        <img src="image.jpg" class="image">
+        <img src="image.JPG" class="image">
         <h1>Kenzie Karwas</h1>
         <h2>IGME 230</h2>
     </div>
@@ -20,6 +20,7 @@
         <h3> Projects</h3>
         <p>Project 1</p>
         <p>Project 2</p>
+        <p>Project 3</p>
    
     </div>
 
