--- a/Exercises/week5a/sample.html
+++ b/Exercises/week5a/sample.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sample Responsive Page</title>
-  <link rel="stylesheet" href="sample.css">
+  <link rel="stylesheet" href="week5a.css">
   <style>
 
   </style>
