--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3> Exercises</h3>
         
         <a href="Exercises/week3b/week3b.html">week3b</a>
-        <a href="Exercises/week5a/sample.html">week5a</a>
+        <p href="Exercises/week5a/sample.html">week5a</p>
         <p>text</p>
         <h3> Projects</h3>
         <p>Project 1</p>
