--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container2">
         <h3> Exercises</h3>
         
-        <a href="Exercises/week3b/week3b.html">week3b</a>
-        <a href="Exercises/week5a/sample.html">week5a</a>
+        <ul href="Exercises/week3b/week3b.html">week3b</ul>
+        <ul href="Exercises/week5a/sample.html">week5a</ul>
         <p>text</p>
         <h3> Projects</h3>
         <p>Project 1</p>
