--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         
         <ul href="Exercises/week3b/week3b.html">week3b</ul>
         <ul href="Exercises/week5a/sample.html">week5a</ul>
-        <p>text</p>
+        <ul href="Exercises/week5a/sample.html">week5b</ul>
+        <ul href="Exercises/week5a/sample.html">week6a</ul>
         <h3> Projects</h3>
         <p>Project 1</p>
         <p>Project 2</p>
