--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="container2">
         <h3> Exercises</h3>
         
-        <ul href="Exercises/week3b/week3b.html">week3b</ul>
-        <ul href="Exercises/week5a/sample.html">week5a</ul>
-        <ul href="Exercises/week5a/sample.html">week5b</ul>
-        <ul href="Exercises/week5a/sample.html">week6a</ul>
+        <a href="Exercises/week3b/week3b.html">week3b</a>
+        <a href="Exercises/week5a/sample.html">week5a</a>
+        <a href="Exercises/week5a/sample.html">week5b</a>
+        <a href="Exercises/week5a/sample.html">week6a</a>
         <h3> Projects</h3>
         <p>Project 1</p>
         <p>Project 2</p>
