--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a href="Exercises/week3b/week3b.html">week3b</a>
         <a href="Exercises/week5a/sample.html">week5a</a>
         <a href="Exercises/week6a/holygrail.html">week6a</a>
+        <a href="Exercises/week6b/holygrail-grid.html">week6a</a>
+    
         <h3> Projects</h3>
         <p>Project 1</p>
         <p>Project 2</p>
