--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <a href="Exercises/week5a/sample.html">week5a</a>
         <a href="Exercises/week6a/holygrail.html">week6a</a>
         <a href="Exercises/week6b/holygrail-grid.html">week6b</a>
+        <a href="Exercises/week6c/responsive-grid.html">week6c</a>
+       
     
         <h3> Projects</h3>
         <p>Project 1</p>
