--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        
     
         <h3> Projects</h3>
-        <p>Project 1</p>
+        <a href="mmk3054.github.io/igme230/">Project 1</a>
         <p>Project 2</p>
         <p>Project 3</p>
    
