--- a/Exercises/week8b/svgdemo.html
+++ b/Exercises/week8b/svgdemo.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="simple.svg" alt="SVG">
+    <svg xmlns="http://www.w3.org/2000/svg" height="250" width="250" >
+
+        <circle cx="50" cy="50" r="25" fill="red" stroke="black" stroke-width="2" />
+        <rect width="200" height="200" x="50" y="50" fill="black" />
+        
+        </svg>
 </body>
-</html>
+</html> 
