--- a/Exercises/week8b/svgdemo.html
+++ b/Exercises/week8b/svgdemo.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Week8b</title>
+
+    <style>
+        #Layer_1 { width: 200px; height: 200px; border: 1px solid black; }
+        </style>
 </head>
 <body>
     <svg xmlns="http://www.w3.org/2000/svg" height="250" width="250" >
