--- a/Exercises/week9a/dom-exercise.html
+++ b/Exercises/week9a/dom-exercise.html
@@ -15,7 +15,13 @@
             to { transform: translateX(0px); }
         }
     </style>
+<script>
+    // first, get a reference to the first <h1> on the page
+    let h1 = document.querySelector('h1');
 
+    // second, change its HTML
+    h1.innerHTML = 'My <em>UFO</em> Page'; 
+</script>
 
 </head>
 
@@ -32,6 +38,8 @@
         <h2>Pictures</h2>
         <p>The aliens ate my camera.</p>
     </main>
+
+
 </body>
 
 </html>
