--- a/Exercises/week9b/dom-exercise2.html
+++ b/Exercises/week9b/dom-exercise2.html
@@ -31,7 +31,32 @@
     </main>
 
     <script>
-            
+    // 1 - Create a <footer>
+let footer = document.createElement("footer");
+
+// 2 - set the title attribute, which gives us a tooltip 
+footer.setAttribute("title","Don't copy this page without my permission!");
+
+// 3 - create the text of the <footer>
+let textNode = document.createTextNode("© 20XX by Ima Student");
+
+// 4 - insert the text into the <footer>
+footer.appendChild(textNode);
+
+// 5 - insert the <footer> at the end of the <body>
+document.body.appendChild(footer);
+
+// 6 - center the contents of footer 
+footer.style.textAlign = "center";
+
+// 7 - this code does the same thing as #1-#6 above, but without 
+// document.createTextNode() or element.setAttribute()
+
+let footer2 = document.createElement("footer");
+footer2.title = "I'm serious! Don't copy it!";
+footer2.innerHTML = "© 20XX by Ima Student"
+document.body.appendChild(footer2);
+footer2.style.textAlign = "center";       
     </script>
 </body>
 
