--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <a href="Exercises/week8b/svgdemo.html">week8b</a>
         <a href="Exercises/week9a/dom-exercise.html">DOM Exercise</a>
         <a href="Exercises/week9b/dom-exercise2.html">DOM Exercise 2</a>
-       
+        <a href="Exercises/week9c/functions-exercise.html">Week 9 Functions Exercise</a>
+
     </div>
         <h3> Projects</h3>
         <a href="https://mmk3054.github.io/igme230/">Project 1</a>
