--- a/Exercises/week9c/functions-exercise.html
+++ b/Exercises/week9c/functions-exercise.html
@@ -36,6 +36,9 @@
         
         function createList(listElement,array){
     // you write the rest
+    for(i = 0; i < sports.length; i++){
+        sports[i];
+    }
 }
     </script>
     
