--- a/Exercises/week9c/functions-exercise.html
+++ b/Exercises/week9c/functions-exercise.html
@@ -42,7 +42,7 @@
     //use the appendChild() method to add it to the #sportsList
 
     
-    for(/*let color of colors*/){
+    for(let color of colors){
         let newListItem = document.createElement("li");
         newListItem.innerHTML = sports;
 //creating variable for that list
@@ -59,9 +59,8 @@
         //let orderedColorsList = element document query 
         //how do we go from a for loop and ubstract those values to pass in 
 
-    for(/*let item of array*/){
+    //for(let item of array)   
 
-    }    
     }
 }
     </script>
