--- a/Exercises/week9c/functions-exercise.html
+++ b/Exercises/week9c/functions-exercise.html
@@ -42,7 +42,7 @@
     //use the appendChild() method to add it to the #sportsList
 
     
-    for(let color of colors){
+    for(let sports of sports){
         let newListItem = document.createElement("li");
         newListItem.innerHTML = sports;
 //creating variable for that list
