--- a/Exercises/week9c/functions-exercise.html
+++ b/Exercises/week9c/functions-exercise.html
@@ -28,20 +28,22 @@
         </ol>
     
       </main>
+
+
+    <script>
       //write a for loop so that values from the sports & foods array creates a new list 
       //add content to the list and insert it in the DOM element
       //use the appendChild() method to add it to the #sportsList
 
-    <script>
         "use strict";
         let sports = ["Buffalo Bills", "Sabers", "Calv's"]; // add some sports
         let foods = ["Chicken Wings", "Salad", "Cheese"]; // add some foods
         
         function createList(sportsList,sports){
   
-    for(let sports of sports){
+    for(let sport of sports){
         let newListItem = document.createElement("li");
-        newListItem.innerHTML = sports;
+        newListItem.innerHTML = sport;
         let orderedList = document.querySelector("#sportsList"); //creating variable for that list
         orderedList.appendChild(newListItem);//append a child to this list we are appending the new list iteam we made
     }
