--- a/Exercises/week9c/functions-exercise.html
+++ b/Exercises/week9c/functions-exercise.html
@@ -50,7 +50,7 @@
         //use the appendChild() method to add it to the #sportsList
 
         "use strict";
-        let sports = ["Buffalo Bills", "Sabers", "Calv's"]; // add some sports
+        let sports = ["Buffalo Bills", "Sabers", "Cav's"]; // add some sports
         let foods = ["Chicken Wings", "Salad", "Cheese"]; // add some foods
 
         function createList(tagOfElement, itemsInList) {
