--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a href="Exercises/week9b/dom-exercise2.html">DOM Exercise 2</a>
         <a href="Exercises/week9c/functions-exercise.html">Week 9 Functions Exercise</a>
         <a href="Exercises/week9d/events-exercise-1.html ">JS Event Exercise</a>
+        <a href="Exercises/week10a/webstorage-exercise.html">JS Web Storage Exercise</a>
 
     </div>
         <h3> Projects</h3>
