--- a/Exercises/week 10b/maps_start.html
+++ b/Exercises/week 10b/maps_start.html
@@ -7,7 +7,7 @@
 
  
 
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyC1QUsSq3K3lNhCiW9vy864hg3pn0HKkIw"></script>` 
+  '<script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyC1QUsSq3K3lNhCiW9vy864hg3pn0HKkIw"></script>` 
 
   <script>
      
