--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
         <h3> Projects</h3>
         <a href="https://mmk3054.github.io/igme230/">Project 1</a>
-        <p>Project 2</p>
+        <a href="projects/project2/projects2.html   ">Project 2</a>
         <p>Project 3</p>
    
     </div>
