--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -12,6 +12,13 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <div class ="gallery"> 
+        <main>
+            <div><img src="https://picsum.photos/200?image=100"></div>
+            <div><img src="https://picsum.photos/200?image=151"></div>
+            <div><img src="https://picsum.photos/200?image=200"></div>
+            <div><img src="https://picsum.photos/200?image=250"></div>
+        </main>
+    </div>
 </body>
 </html>>
