--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Kenzie's Portfolio Page</title>
 
@@ -12,13 +10,31 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div class ="gallery"> 
-        <main>
-            <div><img src="https://picsum.photos/200?image=100"></div>
-            <div><img src="https://picsum.photos/200?image=151"></div>
-            <div><img src="https://picsum.photos/200?image=200"></div>
-            <div><img src="https://picsum.photos/200?image=250"></div>
-        </main>
+    <header class = "site-header">
+        <nav class="nav content">
+            <div class = "gallery">
+                <a href="/work" class ="active" >Work</a>
+            </div>
+            <div class="page-title">
+                <a href="/resume">Resume</a>
+            </div>
+            <div class="page-title">
+                    <a href="/contact">Contact</a>
+                </div>
+                <div class="page-title">
+                        <a href="/notes">Notes</a>
+                    </div>
+        </nav>
+        <div class= "logo-wrap">
+           <h1>Mackenzie Karwas</h1>
+        </div>
+    </header>
+    <div class ="opener"> 
+
     </div>
+
+    <div class ="body"></div>
+
+    <div class="footer"></div>
 </body>
-</html>>
+</html>
