--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -33,15 +33,29 @@
         </div>
         
     </header>
-    <section class="intro">
+    <main class="intro">
             <h1 class = "welcome">Welcome </h1>
         <div class = introduction>
             <p class="subhead">I'm a new media design student located in Rochester, NY. I spend most of my time inside designing things because it's too cold to go outside. Problem solving, critical thinking and creativity is the foundation of my design.</p>
         </div>
-        <div class="box1">
-            <img src="image1.png" alt="phones">
+        <section class="projects">
+        <a class="box1">
+        <div class="cover-image-wrap">
+            <div class="cover-image">
+                <div class="cover-normal">
+                    <img src="image1.png" alt="phone">
+                </div>
+            </div>
         </div>
-
-</section>
+        <div class = "details-wrap">
+            <div class ="details">
+                <div class ="details-inner">
+                    <div class="title1">iMessge Re-Design</div>
+                </div>
+            </div>
+        </div>
+        </a>
+    </section>
+    </main>
 </body>
 </html>
