--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -38,24 +38,14 @@
         <div class = introduction>
             <p class="subhead">I'm a new media design student located in Rochester, NY. I spend most of my time inside designing things because it's too cold to go outside. Problem solving, critical thinking and creativity is the foundation of my design.</p>
         </div>
-        <section class="projects">
-        <a class="box1">
-        <div class="cover-image-wrap">
-            <div class="cover-image">
-                <div class="cover-normal">
-                    <img src="image1.png" alt="phone">
-                </div>
-            </div>
-        </div>
-        <div class = "details-wrap">
-            <div class ="details">
-                <div class ="details-inner">
-                    <div class="title1">iMessge Re-Design</div>
-                </div>
-            </div>
-        </div>
-        </a>
-    </section>
+    <div class="container">
+            <img src="image1.png" alt="phone">
+            <div class="centered">iMessage Re Design</div>
+    </div>
+    <div class="container2">
+            <img src="mandala.png" alt="mandala">
+            <div class="centered2">Mandala Animation</div>
+    </div>
     </main>
 </body>
 </html>
