--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -12,6 +12,7 @@
    
     <script src="main.js"></script>
 </head>
+
 <body>
     <header class = "site-header">
         <nav class="nav content">
@@ -40,11 +41,11 @@
         </div>
     <div class="container">
             <img src="image1.png" alt="phone">
-            <div class="centered">iMessage Re Design</div>
+            <div class="centered"><a href="/work" class ="active" >iMessage Re Design</a></div>
     </div>
     <div class="container2">
             <img src="mandala.png" alt="mandala">
-            <div class="centered2">Mandala Animation</div>
+            <div class="centered2"><a href="/work" class ="active" >Mandala Animation</a></div>
     </div>
     </main>
 </body>
