--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -20,7 +20,8 @@
                 <a href="/work" class ="active" >Work</a>
             </div>
             <div class="page-title">
-                <a href="/resume">Resume</a>
+                <a href="
+                https://mmk3054.github.io/igme230/projects/project2/resume/resume.html  ">Resume</a>
             </div>
             <div class="page-title">
                     <a href="/contact">Contact</a>
