--- a/projects/project2/resume/resume.html
+++ b/projects/project2/resume/resume.html
@@ -15,7 +15,48 @@
 
 <body>
     <header> 
-        <h1>Mackenzie Karwas</h1>
+        <h1 class="title">Resume</h1>
+        <a href="" class="print"><i class="fa fa-print"></i>Print</a>
     </header>
+    <div class="resume">
+    <div class="stuff">
+      <br><br>
+      <h1 class ="name">Mackenzie Karwas</h1>
+      <h2 class="job">UX UI Designer</h2>
+      <hr />
+      <br>
+      <p class="head">Objective</p>
+      <ul>
+        <p>A student who wants to find an internship for summer 2019</p>
+    </ul>
+      <hr />
+      <p class="head">Education</p>
+      <ul>
+        <p>ROCHESTER INSTITUTE OF TECHNOLOGY</p>
+        <p>Bachlore of Fine Arts in New Media Design</p>
+        <p>GPA 3.5/4.0</p>
+      </ul>
+      <hr />
+      <p class="head">Work Experience</p>
+  
+      <ul>  
+            TJ MAXX | Sales Accosiate
+          <li>Tasks include stocking, creating displays, and processing transactions</li>
+          TONY WALKER & CO | Concierge
+          <li>Provided exceptional customer service to all customers</li>
+      </ul>
+
+
+      <hr />
+      <p class="head">Leadership / Involvment</p>
+      <ul>
+        VICE PRESIDENT OF RECRUITMENT
+        <li>Creative Director of fashion, style, online branding and public relations </li>
+        <li>Plans, designs and directs all recruitment events for the chapter</li>
+        <li>Tracked mentions and outlined performance of social media</li>
+
+      </ul>
+    </div>
+    </div>
 </body>
 </html>
