--- a/projects/project2/contact/index.html
+++ b/projects/project2/contact/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Kenzie Karwas</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="week1.css">
 </head>
 
 <body>
