--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -24,7 +24,7 @@
                 https://mmk3054.github.io/igme230/projects/project2/resume/resume.html  ">Resume</a>
             </div>
             <div class="page-title">
-                    <a href="/contact">Contact</a>
+                    <a href="https://mmk3054.github.io/igme230/projects/project2/contact/contact.html">Contact</a>
                 </div>
                 <div class="page-title">
                         <a href="/notes">Notes</a>
