--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -27,7 +27,7 @@
                     <a href="https://mmk3054.github.io/igme230/projects/project2/contact/contact.html">Contact</a>
                 </div>
                 <div class="page-title">
-                        <a href="/notes">Notes</a>
+                        <a href="https://mmk3054.github.io/igme230/projects/project2/notes/notes.html">Notes</a>
                     </div>
         </nav>
         <div class= "logo-wrap"> 
