--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -42,11 +42,11 @@
         </div>
     <div class="container">
             <img src="image1.png" alt="phone">
-            <div class="centered"><a href="/work" class ="active" >iMessage Re Design</a></div>
+            <div class="centered"><a href="https://mmk3054.github.io/igme230/projects/project2/phone/phone.html" class ="active" >iMessage Re Design</a></div>
     </div>
     <div class="container2">
             <img src="mandala.png" alt="mandala">
-            <div class="centered2"><a href="/work" class ="active" >Mandala Animation</a></div>
+            <div class="centered2"><a href="https://mmk3054.github.io/igme230/projects/project2/mandala/mandala.html" class ="active" >Mandala Animation</a></div>
     </div>
     </main>
 </body>
