--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -16,19 +16,19 @@
 <body>
     <header class = "site-header">
         <nav class="nav content">
-            <div class = "gallery">
-                <a href="/work" class ="active" >Work</a>
-            </div>
-            <div class="page-title">
-                <a href="
-                https://mmk3054.github.io/igme230/projects/project2/resume/resume.html  ">Resume</a>
-            </div>
-            <div class="page-title">
-                    <a href="https://mmk3054.github.io/igme230/projects/project2/contact/contact.html">Contact</a>
-                </div>
-                <div class="page-title">
-                        <a href="https://mmk3054.github.io/igme230/projects/project2/notes/notes.html">Notes</a>
-                    </div>
+            <ul>
+                    <li class="dropdown">
+                            <a href="javascript:void(0)" class="dropbtn">Work</a>
+                            <div class="dropdown-content">
+                              <a href="https://mmk3054.github.io/igme230/projects/project2/phone/phone.html">iMessage</a>
+                              <a href="https://mmk3054.github.io/igme230/projects/project2/mandala/mandala.html">Mandala</a>
+                            </div>
+                          </li>
+                <li><a href="https://mmk3054.github.io/igme230/projects/project2/resume/resume.html">Resume</a></li>
+                <li><a href="https://mmk3054.github.io/igme230/projects/project2/contact/contact.html">Contact</a></li>
+                <li><a href="https://mmk3054.github.io/igme230/projects/project2/notes/notes.html">Notes</a></li>
+        
+              </ul>
         </nav>
         <div class= "logo-wrap"> 
            <h1 class="name"> Mackenzie Karwas</h1>
