--- a/projects/project2/notes/notes.html
+++ b/projects/project2/notes/notes.html
@@ -9,6 +9,10 @@
 <body>
 
   <h1>Hi</h1>
+  <p>Source information for any images or code that you didn't create yourself (including CSS frameworks, typefaces, and any code libraries)
+    Description of any particularly challenging aspects of the design and how you dealt with them.
+    If you used a template or framework, explain how you modified it so that your portfolio has a unique look and feel.
+    Anything that goes beyond the base expectations for the project--what did you do that was particularly challenging? This could involve art/design, content, or code.</p>
     
 
 </body>
