--- a/projects/project2/contact/contact.html
+++ b/projects/project2/contact/contact.html
@@ -14,6 +14,14 @@
             <div>
                 Write a message <input type="text" id="nameField">
             </div>
+            <div class="container2">
+                <div>
+                    <ul>
+                    <li><h1>Phone</h1><p>716-465-1853</p></li>
+                    <li><h1>Email</h1><p>mmk3054@rit.edu</p></li>
+                    <li><h1>Website</h1><p>https://mmk3054.github.io/igme230/</p></li>
+                </ul>
+                </div>
         </div>
     </div>
     
