--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -48,6 +48,10 @@
             <img src="mandala.png" alt="mandala">
             <div class="centered2"><a href="https://mmk3054.github.io/igme230/projects/project2/mandala/mandala.html" class ="active" >Mandala Animation</a></div>
     </div>
+    <div class="container2">
+        <img src="dmv.png" alt="dmv">
+        <div class="centered2"><a href="https://mmk3054.github.io/igme230/projects/project2/mandala/mandala.html" class ="active" >Mandala Animation</a></div>
+</div>
     </main>
 </body>
 </html>
