--- a/projects/project2/notes/notes.html
+++ b/projects/project2/notes/notes.html
@@ -9,10 +9,21 @@
 <body>
 
   <h1>Hi</h1>
-  <p>Source information for any images or code that you didn't create yourself (including CSS frameworks, typefaces, and any code libraries)
-    Description of any particularly challenging aspects of the design and how you dealt with them.
-    If you used a template or framework, explain how you modified it so that your portfolio has a unique look and feel.
-    Anything that goes beyond the base expectations for the project--what did you do that was particularly challenging? This could involve art/design, content, or code.</p>
+  <p>Source information for any images or code that you didn't create yourself (including CSS frameworks, typefaces, and any code libraries)</p>
+  <h2> Description of any particularly challenging aspects of the design and how you dealt with them.</h2> 
+      <ul>
+   <li> I had a tough time trying to put my logo in the top left corner next to my name.</li>
+   <li>I had a tough time trying to get the font to change color when you hover over the box</li>
+   <li></li>
+    </ul>
+   <h2> If you used a template or framework, explain how you modified it so that your portfolio has a unique look and feel.</h2>
+   <ul>
+       <li>I used a templete I created in the design doc but I was having a tough time getting the images to line up so I had them decending one at a time</li>
+   </ul>
+   <h2> Anything that goes beyond the base expectations for the project--what did you do that was particularly challenging? This could involve art/design, content, or code./h2>
+       <ul>
+           <li>Note to self-Continue updating</li>
+       </ul>
     
 
 </body>
