--- a/projects/project2/notes/notes.html
+++ b/projects/project2/notes/notes.html
@@ -20,7 +20,7 @@
    <ul>
        <li>I used a templete I created in the design doc but I was having a tough time getting the images to line up so I had them decending one at a time</li>
    </ul>
-   <h2> Anything that goes beyond the base expectations for the project--what did you do that was particularly challenging? This could involve art/design, content, or code./h2>
+   <h2> Anything that goes beyond the base expectations for the project--what did you do that was particularly challenging? This could involve art/design, content, or code.</h2>
        <ul>
            <li>Note to self-Continue updating</li>
        </ul>
