--- a/projects/project2/notes/notes.html
+++ b/projects/project2/notes/notes.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <h1>Hi</h1>
+  <h1>Notes</h1>
   <p>Source information for any images or code that you didn't create yourself (including CSS frameworks, typefaces, and any code libraries)</p>
   <h2> Description of any particularly challenging aspects of the design and how you dealt with them.</h2> 
       <ul>
