--- a/projects/project2/notes/notes.html
+++ b/projects/project2/notes/notes.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Kenzie Karwas</title>
-    <link rel="stylesheet" href="notes.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="notes.css">
 </head>
 
 <body>
