--- a/projects/project2/projects2.html
+++ b/projects/project2/projects2.html
@@ -50,7 +50,7 @@
     </div>
     <div class="container2">
         <img src="dmv.png" alt="dmv">
-        <div class="centered2"><a href="https://mmk3054.github.io/igme230/projects/project2/mandala/mandala.html" class ="active" >Mandala Animation</a></div>
+        <div class="centered2"><a href="https://mmk3054.github.io/igme230/projects/project2/dmv/dmv.html" class ="active" >DMV Re Design</a></div>
 </div>
     </main>
 </body>
