--- a/Exercises/week11a/week11.html
+++ b/Exercises/week11a/week11.html
@@ -9,7 +9,13 @@
         #mygrid{
             display:grid;
             grid-template-rows: 200px 200px 200px; /*makes 3 rows*/
-            grid-template-columns: 200px 200px 200px; /*makes 3 columns*/
+            grid-template-columns: 200px 200px 200px;
+
+        }
+        #mygrid div{
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
