--- a/Exercises/week11a/week11.html
+++ b/Exercises/week11a/week11.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="myid">
-        <div>Cell 1</div>
+        <div class="headbar">Cell 1</div>
         <div>Cell 2</div>
         <div>Cell 3</div>
         <div>Cell 4</div>
