--- a/Exercises/week11b/jQuery.html
+++ b/Exercises/week11b/jQuery.html
@@ -34,6 +34,12 @@
      $("#show").click(function(){
              $("#navpanel").show(1500); //number of milaseconds that it will take to execute 
         });
+
+
+       /* $(",toggleannel2").click(function(){
+            $(#pannel2).slideToggle("slow");
+        });*/
+        //pannel 1 nd pannel 2 have same class but diffrent id's, you can assign the same behavior to both, when I click on you I want you to toggle the panel
         </script>
 </body>
 </html>
