--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="Exercises/week10a/webstorage-exercise.html">JS Web Storage Exercise</a>
         <a href="Exercises/week10b/maps_start.html">JS Web Services Exercise</a>
         <a href="Exercises/week11b/jQuery.html">jQuery Exercise</a>
-        <a href="Exercises/week12a/pixel-artist.html">jWeek 12: Pixel Artist Exercise</a>
+        <a href="Exercises/week12a/pixel-artist.html">Week 12: Pixel Artist Exercise</a>
 
     </div>
         <h3> Projects</h3>
