--- a/Exercises/week12a/pixel-artist.html
+++ b/Exercises/week12a/pixel-artist.html
@@ -86,7 +86,7 @@
     <div id="wrapper">
         <h1>Pixel ArTeur</h1>
         <div id="pixelGrid"></div>
-
+        
         <div id="instructions">
             <p>Select a color, then click or drag across squares to change them to that color.</p>
             <select id="colorChooser">
@@ -108,7 +108,11 @@
         </div>
     </div>
     <script>
-     
+        const numCols = 30; // specify pixel grid columns
+        const numRows = 20; // specify pixel grid rows
+        const cellSize = 25; // specify dimension of cell square in px
+        const numCells = numCols * numRows; // calculate total number of cells
+
 
 
     </script>
