--- a/Exercises/week12a/pixel-artist.html
+++ b/Exercises/week12a/pixel-artist.html
@@ -112,9 +112,24 @@
         const numRows = 20; // specify pixel grid rows
         const cellSize = 25; // specify dimension of cell square in px
         const numCells = numCols * numRows; // calculate total number of cells
+        const gridHeight= (numRows * (cellSize +1)) -1;
+        const gridWidth = (numCols * (cellSize +1)) -1;
 
+        let pixelGrid = document.querySelector("#pixelGrid");
 
+        pixelGrid.style.gridTemplateRows= `repeat(${numRows}, ${cellSize}px)`;
+        //creates pixelGrid rows
+        pixelGrid.style.gridTemplateColumns= `repeat(${numCols}, ${cellSize}px)`;
+        //creates pixelGrid cols
 
+        pixelGrid.style.height = `${gridHeight}px`;
+        
+        let wrapper = document.querySelector("#wrapper");
+        wrapper.style.gridTemplateColumns = `1fr ${gridWidth}px 250px 1fr`;
+
+        for(let i = 0; i < numCells; i++){
+            $("#pixelGrid").append('<span class="cell"></span>'); //$ says this is jQuery now...You are grabbing form pixal Grind...what are you appending?
+        }
     </script>
 </body>
 
