--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3> Projects</h3>
         <a href="https://mmk3054.github.io/igme230/">Project 1</a>
         <a href="projects/project2/projects2.html">Project 2</a>
-        <p>Project 3</p>
+        <a href="projects/project3/index.html">Project 3</a>
    
     </div>
 
