--- a/projects/project3/index.html
+++ b/projects/project3/index.html
@@ -53,6 +53,18 @@
             height: 100%;
             width: 30vh;
         }
+        .cell4{
+            grid-column:2/3;
+            margin: 1px;
+            width: 20%;
+            height: 40vh;
+
+        }
+        .cell5{
+            grid-column:2/4;
+            width: 100%;
+            height: 40vh; 
+        }
      
 
     </style>
@@ -63,6 +75,9 @@
         <div class="headerbar">Cell 1</div>
         <div class ="cell2">Cell 2</div>
         <div class="cell3">Cell 3</div>
+        <div class="cell4">Cell 4</div>
+        <div class="cell5">Cell 5</div>
+
        
   
     </div>
