--- a/Exercises/ajax/ajax-query.html
+++ b/Exercises/ajax/ajax-query.html
@@ -77,7 +77,29 @@
     </div>
     <script>
         'use strict';
-        
+        let verseChoose = document.querySelector('select'); // the select menu
+        let poemDisplay = document.querySelector('#selectedverse');  // the space for the verse to display
+        let verse = "verse1-2.txt" ; // the chosen verse; initialize with first menu option
+
+        function updateVerse(verse) {
+        let verseRequest = new XMLHttpRequest();  // defines a specific request
+        verseRequest.open('GET', verse);  // specifies what to do when request is sent
+        verseRequest.responseType = 'text'; // specifies that the files should be treated as text
+        verseRequest.onload = function () {  // specifies what to do when file is loaded
+        poemDisplay.innerHTML = verseRequest.response;  // place the response text in the selected element
+    };
+    verseRequest.send(); // actually sends the request
+    };
+
+    verseChoose.onchange = function () {
+    verse = verseChoose.value;
+    updateVerse(verse);
+    };
+
+    verseChoose.value = verse; // shows initial menu option
+    updateVerse(verse);  // shows intial content
+
+    
     </script>
 </body>
 
