--- a/Exercises/ajax-jQuery/ajax-query.html
+++ b/Exercises/ajax-jQuery/ajax-query.html
@@ -81,7 +81,10 @@
         $("#verse-choose").val(verse); // changes menu option to default
         $("#selectedverse").load(verse);   // retrieves only default element
 
-        
+        $("#verse-choose").change(function() {
+        verse = $(this).val();
+        $("#selectedverse").load(verse); 
+});
     </script>
 </body>
 
