--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="Exercises/week10b/maps_start.html">JS Web Services Exercise</a>
         <a href="Exercises/week11b/jQuery.html">jQuery Exercise</a>
         <a href="Exercises/week12a/pixel-artist.html">Week 12: Pixel Artist Exercise</a>
+        <a href="Exercises/ajax-jQuery/ajax-query.html ">Week 14: ajax-jQuery</a>
 
     </div>
         <h3> Projects</h3>
