--- a/fall2018final/fall2018final.html
+++ b/fall2018final/fall2018final.html
@@ -58,7 +58,7 @@
         <aside>
             <h2>Click a Button to Change the Article</h2>
             <form>
-                <input type="radio" name="story1" value="article1.txt">Article 1<br>
+                <input type="radio" name="story" value="article1.txt">Article 1<br>
                 <input type="radio" name="story" value="article2.txt">Article 2
             </form>
 
