--- a/project3/index.html
+++ b/project3/index.html
@@ -31,14 +31,14 @@
           </div>
           <div class="resume">
             <img alt="icon2" src="resume.png">
-            <a href="#">Resume</a>
+            <a href="https://mmk3054.github.io/igme230/project3/resume/resume.html">Resume</a>
           </div>
           <div class="notes">
             <img alt="icon3" src="notes.png">
-            <a href="#">Notes</a>
+            <a href="https://mmk3054.github.io/igme230/project3/notes/notes.html">Notes</a>
           </div>
           <div class="contact">
-            <img alt="icon4" src="profile.png">
+            <img alt="https://mmk3054.github.io/igme230/project3/contact/contact.html" src="profile.png">
             <a href="#">Contact</a>
           </div>
           </div>
