--- a/project3/resume/resume.html
+++ b/project3/resume/resume.html
@@ -3,21 +3,27 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+       
     <title>Resume</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="resume.css" />
    
-    <script src="main.js"></script>
+    <script>
+ function myFunction() {
+    window.print();
+};
+
+    </script>
 </head>
 
 <body>
     <header> 
         <h1 class="title">Resume</h1>
-        <a href="" class="print"><i class="fa fa-print"></i>Print</a>
+       
     </header>
+    <button class="button" onclick="myFunction()">Print this page</button>
     <div class="resume">
     <div class="stuff">
       <br><br>
