--- a/project3/resume/resume.html
+++ b/project3/resume/resume.html
@@ -17,7 +17,7 @@
 
     </script>
 </head>
-
+<div class="mygrid">
 <body>
     <header> 
         <h1 class="title">Resume</h1>
@@ -65,4 +65,5 @@
     </div>
     </div>
 </body>
+</div>
 </html>
