added mandala link

--- a/project3/index.html
+++ b/project3/index.html
@@ -71,7 +71,7 @@
 
         <div class="content">
           <div class="cell4">
-              <a href="https://mmk3054.github.io/igme230/">
+              <a href="https://mmk3054.github.io/igme230/project3/mandala/mandala.html">
             <div class="image4">
                 <img alt="photo4" src="mandala.png">
             </div>
