--- a/project3/index.html
+++ b/project3/index.html
@@ -27,7 +27,7 @@
             <div class="space"></div>
             <div class="work">
               <img alt="icon1" src="work.png">
-            <a href="#">Work</a>
+            <a href="https://mmk3054.github.io/igme230/project3/index.html">Work</a>
           </div>
           <div class="resume">
             <img alt="icon2" src="resume.png">
